# kamisado-awase

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  dev.sh  index.html  launch.json
.github/workflows/: frontend.yml
assets/: index--9iZR2nh.js  index-64LQ2XJf.js  index-CWYIrfEO.js  index-CaGp_S5W.js  index-CxLQvXEh.css  index-WaDg212r.js  index-cXty2Udq.js  index-heDXbEqZ.js
core/: CMakeLists.txt
core/include/kamisado/: Board.hpp  BoardColoring.hpp  BoardProps.hpp  GameService.hpp  GameState.hpp  Player.hpp  SearchEngine.hpp
core/src/: GameService.cpp  MoveGen.cpp  SearchEngine.cpp
include/kamisado/: Board.hpp  BoardColoring.hpp  BoardProps.hpp  Config.hpp  Evaluator.hpp  Game.hpp  GameState.hpp  Goals.hpp  Move.hpp  MoveGen.hpp  Outcome.hpp  SearchEngine.hpp
src/: Board.cpp  Evaluator.cpp  Game.cpp  GameState.cpp  Main.cpp  MoveGen.cpp  SearchEngine.cpp
tools/: CMakeLists.txt
tools/engine-gui/: CMakeLists.txt
tools/engine-gui/include/engine-gui/: Game.hpp
tools/engine-gui/src/: Game.cpp  Main.cpp
tools/web/frontend/: index.html  package-lock.json  package.json  vite.config.js
tools/web/frontend/src/: App.vue  api.js  main.js  style.css
tools/web/frontend/src/components/: AdvantageBar.vue  ArrowOverlay.vue  Board.vue  GameView.vue  MovesPanel.vue  SessionSetup.vue
tools/web/server/: CMakeLists.txt  config.json  config.yaml  main.cc
tools/web/server/controllers/: GameController.cc  GameController.h  SessionsController.cc  SessionsController.h  WsSessionController.cc  WsSessionController.h
tools/web/server/filters/: AuthFilter.cc  AuthFilter.h
tools/web/server/plugins/: SessionManagerPlugin.cc  SessionManagerPlugin.h
tools/web/server/utils/: Json.cc  Json.h  Utils.cc  Utils.h
